<resources>
    <string name="app_name">My First App</string>
    <string name="action_settings">Settings</string>
    <string name="edit_message">Enter a message</string>
    <string name="button_send">Send</string>
    <string name="title_activity_display_message">My Message</string>
    <string name="drawer_open">Open Drawer</string>
    <string name="drawer_close">Close Drawer</string>
    <string name="properties">Properties</string>
    <string name="look_feel"><![CDATA[Look & Feel]]></string>
    <string name="organize">Organize</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="prop_general">General</string>
    <string name="prop_app_launcher">App Launcher</string>
    <string name="prop_enable">Enable ReLaunch</string>
    <string name="prop_start_boot">Start on Boot</string>
    <string name="prop_enable_notification">Ongoing Notification</string>
    <string name="prop_icon_size">App Icon size</string>
    <string name="pref_orientation">Active Orientation</string>
    <string name="prop_delay">Launcher Delay</string>
    <string name="notification_content">Select to configure</string>
    <string name="notification_title">ReLaunch running</string>
    <string name="prop_snap">Touch Snap</string>
    <string name="prop_haptic">Haptic Feedback</string>
    <string name="prop_list_orientation">Orientation</string>

    <string-array name="prop_icon_size">
        <item>Extra Small</item>
        <item>Small</item>
        <item>Medium</item>
        <item>Large</item>
        <item>Extra Large</item>
    </string-array>
    <string-array name="prop_icon_size_values">
        <item>22</item>
        <item>30</item>
        <item>40</item>
        <item>50</item>
        <item>60</item>
    </string-array>

    <string-array name="prop_delay">
        <item>0 Seconds</item>
        <item>0.1 Seconds</item>
        <item>0.2 Seconds</item>
        <item>0.5 Seconds</item>
        <item>1 Seconds</item>
        <item>2 Seconds</item>
    </string-array>
    <string-array name="prop_delay_values">
        <item>0</item>
        <item>100</item>
        <item>200</item>
        <item>500</item>
        <item>1000</item>
        <item>2000</item>
    </string-array>
</resources>
