<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_properties"
            android:icon="@drawable/ic_menu_build"
            android:title="@string/properties" />
        <item
            android:id="@+id/nav_look_feel"
            android:icon="@drawable/ic_menu_edit"
            android:title="@string/look_feel" />
        <item
            android:id="@+id/nav_organize"
            android:icon="@drawable/ic_menu_sort"
            android:title="@string/organize" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="Send" />
        </menu>
    </item>

</menu>
